[package]
name = "tree876"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotrix = "0.5.2"

[dependencies.bytemuck]
version = "1.4"
features = ["derive"]

[[bin]]
name = "tree876"
path = "src/main.rs"


